[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-query-builder"
dynamic = ["version"]
description = "Component for Dash based on react-awesome-query-builder"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Tyler Baur <baur.tyler@gmail.com>" },
]
classifiers = [
    "Framework :: Dash",
]
dependencies = ["dash>=2.0"]


[project.optional-dependencies]
dev = [
    "dash[testing,dev]",
    "pre-commit",
    "ruff",
    "dash-query-builder[where]"
    ]

where = [
    "pyparsing>=3.0.9",
    "shortuuid>=1.0.11"
    ]

[tool.hatch.version]
path = "dash_query_builder/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/dash_query_builder",
]
