[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-query-builder"
dynamic = ["version"]
description = "Component for Dash based on react-awesome-query-builder"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["dash", "dash-query-builder"]
authors = [
    { name = "Tyler Baur",email = "baur.tyler@gmail.com" },
]
classifiers = [
    "Framework :: Dash",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]
dependencies = ["dash>=2.0"]

[project.urls]
Homepage = "https://github.com/tillerburr/dash-query-builder"
Repository = "https://github.com/tillerburr/dash-query-builder"
Issues = "https://github.com/tillerburr/dash-query-builder/issues"


[project.optional-dependencies]
test = [
   "dash[testing,dev]",
    "ruff",
    "pyparsing",
    "shortuuid"
    ]

where = [
    "pyparsing>=3.0.9",
    "shortuuid>=1.0.11"
    ]

[tool.hatch.version]
path = "dash_query_builder/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/dash_query_builder",
]

[tool.hatch.build.targets.wheel]
packages = ["dash_query_builder"]

[tool.ruff]
extend-exclude=["dash_query_builder/DashQueryBuilder.py", "dash_query_builder/_imports_.py"]
